# teensy-trap

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix  rustfmt.toml
.cargo/: config.toml
examples/: blink.rs
src/: main.rs
src/device/: descriptors.rs  endpoint.rs  hid_device.rs  mod.rs  proxy_device.rs
src/host/: enumerate.rs  hid.rs  mod.rs  mouse.rs
src/proxy/: forward.rs  inject.rs  mod.rs
src/serial/: command.rs
src/usb/: async_schedule.rs  consts.rs  device.rs  ehci.rs  mod.rs  periodic.rs  qh.rs  qtd.rs  transaction.rs
tools/: inject.py
